--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "engines": {
     "npm": "6.9.0",
-    "node": "v10.16.3"
+    "node": "10.16.3"
   },
   "scripts": {
     "start": "react-scripts start",
